-added a few small shifts on the heat map -made spark lines (to be renamed) sensitive to scale changes if a new coordinate with a greater max count is added to the display -still some bugs in the spark lines to be investigated, but it works pretty well

--- a/packages/modules/loc-spark-view/loc-spark-styles.css
+++ b/packages/modules/loc-spark-view/loc-spark-styles.css
@@ -1,5 +1,5 @@
 .path{
-  stroke: blue;
+  stroke: black;
 }
 .axis path,
 .axis line {
@@ -15,4 +15,9 @@
   font-family:"Times New Roman",Times,serif;
   position: relative;
   left: 15px;
+}
+
+.trendGraphParent{
+  border-width: 1px;
+  border-color: #ABABAB;
 }
